; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_iwalk.c_xfs_iwalk_prefetch.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/extr_xfs_iwalk.c_xfs_iwalk_prefetch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IWALK_MAX_INODE_PREFETCH = common dso_local global i32 0, align 4
@XFS_INODES_PER_CHUNK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @xfs_iwalk_prefetch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xfs_iwalk_prefetch(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @IWALK_MAX_INODE_PREFETCH, align 4
  store i32 %7, i32* %2, align 4
  br label %8

8:                                                ; preds = %6, %1
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @IWALK_MAX_INODE_PREFETCH, align 4
  %11 = call i32 @min(i32 %9, i32 %10)
  store i32 %11, i32* %2, align 4
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* @XFS_INODES_PER_CHUNK, align 4
  %14 = call i32 @round_up(i32 %12, i32 %13)
  store i32 %14, i32* %2, align 4
  %15 = load i32, i32* %2, align 4
  %16 = mul i32 %15, 5
  %17 = load i32, i32* @XFS_INODES_PER_CHUNK, align 4
  %18 = mul nsw i32 4, %17
  %19 = udiv i32 %16, %18
  store i32 %19, i32* %3, align 4
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @max(i32 %20, i32 2)
  ret i32 %21
}

declare dso_local i32 @min(i32, i32) #1

declare dso_local i32 @round_up(i32, i32) #1

declare dso_local i32 @max(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
